<resources>
    <string name="app_name">QuizApp</string>
    <string name="textView">Enter your name:</string>
    <string name="sit305_quiz_app">SIT305 Quiz App</string>
    <string name="userName"></string>
    <string name="buttonStart">START</string>
    <string name="userHint">username</string>
    <string name="resultPopUP">Congratulations Ajay!</string>
    <string name="resultPopUP2">YOUR SCORE:</string>
    <string name="resultPopUP3">1/5</string>
    <string name="buttonTakeQuizAgain">Take Quiz Again</string>
    <string name="buttonFinish">FINISH</string>
    <string name="welcomeHeading">Welcome Your Name!</string>
    <string name="progressNumber">1/5</string>
    <string name="questionTitle">Question 1:</string>
    <string name="question">Which method do we used to get result from another activity?</string>
    <string name="option1">Stop animations or other ongoing actions that could consume CPU</string>
    <string name="option2">Stop animations or other ongoing actions that could consume CPU</string>
    <string name="option3">Stop animations or other ongoing actions that could consume CPU</string>
    <string name="submit">Submit</string>
</resources>